# CrewAI-Multi-Agents

./: crew_ai.py
story_makey/: README.md  pyproject.toml
story_makey/src/story_makey/: crew.py  main.py
