[project]
name = "story_makey"
version = "0.1.0"
description = "story_makey using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.7.2",
]

[project.scripts]
story_makey = "story_makey.main:run"
run_crew = "story_makey.main:run"
train = "story_makey.main:train"
replay = "story_makey.main:replay"
test = "story_makey.main:test"
run_with_trigger = "story_makey.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
